add email confirmation when registering

--- a/src/main/resources/templates/EmailSentView.html
+++ b/src/main/resources/templates/EmailSentView.html
@@ -7,8 +7,14 @@
 </head>
 <body class="register-view d-flex flex-column min-vh-100">
 <header th:replace="~{fragments/navbar :: header(context='email-sent')}"></header>
-<div class="container mt-5 alert alert-info text-center" role="alert">
+<div th:if="${requestURI.endsWith('/forgottenpassword')}" class="container mt-5 alert alert-info text-center" role="alert">
     We've sent a link to your email for password reset!
+</div>
+<div th:if="${requestURI.endsWith('/register')}" class="container mt-5 alert alert-info text-center" role="alert">
+    We've sent a link to your email for account confirmation!
+</div>
+<div th:if="${requestURI.contains('/confirmation')}" class="container mt-5 alert alert-info text-center" role="alert">
+    Account verified!
 </div>
 <div th:replace="~{fragments/footer :: footer}"></div>
 <script th:replace="~{fragments/scripts :: bootstrap}"></script>
