--- a/src/main/resources/templates/UserView.html
+++ b/src/main/resources/templates/UserView.html
@@ -163,9 +163,14 @@
                     type="button" role="tab" aria-controls="active-contests-tab-pane" aria-selected="true">Active Contests
             </button>
           </li>
-          <li class="nav-item" role="presentation">
+          <li class="nav-item me-1" role="presentation">
             <button class="nav-link" id="finished-contests-tab" data-bs-toggle="tab" data-bs-target="#finished-contests-tab-pane"
                     type="button" role="tab" aria-controls="finished-contests-tab-pane" aria-selected="false">Finished Contests
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="jury-contests-tab" data-bs-toggle="tab" data-bs-target="#jury-contests-tab-pane"
+                    type="button" role="tab" aria-controls="jury-contests-tab-pane" aria-selected="false">Jury in Contests
             </button>
           </li>
         </ul>
@@ -241,6 +246,42 @@
               </th:block>
             </div>
           </div>
+
+          <div class="tab-pane fade" id="jury-contests-tab-pane" role="tabpanel" aria-labelledby="jury-contests-tab"
+               tabindex="0">
+            <div class="list-group w-auto mt-1 bg-dark" style="height: 285px; min-height: 285px; overflow: auto;">
+              <th:block th:if="${user.juryInContests.isEmpty()}">
+                <div class="d-flex gap-2 w-100 justify-content-center text-bg-dark text-warning rounded">
+                  <h6 class="mb-0 display-6 pt-3">No Contests</h6>
+                </div>
+              </th:block>
+              <th:block th:each="contest : ${user.juryInContests}">
+                <a href="#" th:href="@{/contests/{id}(id=${contest.id})}"
+                   class="list-group-item list-group-item-action d-flex gap-3 text-bg-dark text-warning" aria-current="true">
+                  <img class="img-thumbnail rounded" th:if="${contest.coverPhoto != null}"
+                       style="max-width: 15%" th:src="${contest.coverPhoto}" th:alt="${'Cover Photo'}"
+                       alt="Cover Photo" src="#">
+                  <img class="img-thumbnail rounded"
+                       th:if="${contest.coverPhoto == null}" th:src="@{/images/no-cover-img.png}"
+                       th:alt="${'No Cover Image'}" alt="No Cover Image" src="../static/images/no-cover-img.png"
+                       style="max-width: 15%">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0" th:text="${contest.title}">Title (design!)</h6>
+                      <i class="bi bi-tag-fill pe-1"></i><span class="mb-0 opacity-75" th:text="${contest.category.name}">Category (design!)</span><br>
+                      <i class="bi pe-1" th:classappend="${contest.invitational ? 'bi-lock-fill' : 'bi-unlock-fill'}"></i><span class="mb-0 opacity-75" th:text="${contest.invitational ? 'Invitational' : 'Open'}">Type (design!)</span>
+                    </div>
+                    <div>
+                      <i class="bi bi-people"></i>
+                      <span th:text="${contest.participants.size()}"></span><br>
+<!--                      <i th:if="${contest.winners.contains(user)}" class="bi bi-trophy-fill" style="font-size: 2rem"></i>-->
+                    </div>
+                  </div>
+                </a>
+              </th:block>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
