--- a/src/main/resources/templates/EmailSentView.html
+++ b/src/main/resources/templates/EmailSentView.html
@@ -11,10 +11,13 @@
     We've sent a link to your email for password reset!
 </div>
 <div th:if="${requestURI.endsWith('/register')}" class="container mt-5 alert alert-info text-center" role="alert">
-    We've sent a link to your email for account confirmation!
+    We've sent a link to your email for account verification!
+</div>
+<div th:if="${requestURI.endsWith('/email')}" class="container mt-5 alert alert-info text-center" role="alert">
+    We've sent a link to your new email for confirmation!
 </div>
 <div th:if="${requestURI.contains('/confirmation')}" class="container mt-5 alert alert-info text-center" role="alert">
-    Account verified!
+    Account/Email verified!
 </div>
 <div th:replace="~{fragments/footer :: footer}"></div>
 <script th:replace="~{fragments/scripts :: bootstrap}"></script>
