--- a/src/main/resources/templates/UserView.html
+++ b/src/main/resources/templates/UserView.html
@@ -9,7 +9,8 @@
 <body class="user-view d-flex flex-column min-vh-100"
       th:with="permissionPath=${requestURI + '/permissions'},
                updatePath=${requestURI + '/update'},
-               deletePath=${requestURI + '/delete'}">
+               deletePath=${requestURI + '/delete'},
+               updateEmailPath=${requestURI + '/email'}">
 
 <header th:replace="~{fragments/navbar :: header(context='user-profile')}"></header>
 
@@ -62,9 +63,9 @@
                     <span th:text="${user.points + ' Points'}">Points (design!)</span>
                     <th:block th:if="${user.rank.name != 'Wise and Benevolent Photo Dictator'}">
                       <span th:text="'(until next rank:'"></span>
-                      <span class="fw-bold" th:if="${user.rank.name == 'Junkie'}" th:text="${50 - user.points}">35</span>
-                      <span class="fw-bold" th:if="${user.rank.name == 'Enthusiast'}" th:text="${150 - user.points}">75</span>
-                      <span class="fw-bold" th:if="${user.rank.name == 'Master'}" th:text="${1000 - user.points}">75</span>
+                      <span class="fw-bold" th:if="${user.rank.name == 'Junkie'}" th:text="${51 - user.points}">35</span>
+                      <span class="fw-bold" th:if="${user.rank.name == 'Enthusiast'}" th:text="${151 - user.points}">75</span>
+                      <span class="fw-bold" th:if="${user.rank.name == 'Master'}" th:text="${1001 - user.points}">75</span>
                       <span th:text="'points)'"></span>
                     </th:block>
                   </div>
@@ -76,6 +77,7 @@
                  class="card-footer text-center">
               <a th:if="${session.user.isOrganizer()}" href="#" class="btn btn-success" th:href="@{${permissionPath}}"><i class="bi bi-toggles" title="Update permissions"></i></a>
               <a href="#" class="btn btn-warning" th:href="@{${updatePath}}"><i class="bi bi-person-lines-fill" title="Update settings"></i></a>
+              <a href="#" class="btn btn-warning" th:href="@{${updateEmailPath}}"><i class="bi bi-at" title="Update Email"></i></a>
               <a href="#" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-danger"><i class="bi bi-person-fill-slash" title="Delete account"></i></a>
             </div>
           </div>
