--- a/src/main/resources/templates/fragments/photos-view.html
+++ b/src/main/resources/templates/fragments/photos-view.html
@@ -5,7 +5,7 @@
   <div class="container py-5">
     <div class="row row-cols-1 row-cols-sm-2 g-3">
       <th:block th:each="photo : ${photos}">
-        <div class="col  rounded-4">
+        <div class="col rounded-4">
           <div class="card shadow-sm">
             <div class="card-header bg-warning text-dark" th:text="${#strings.length(photo.title) > 30 ? #strings.substring(photo.title, 0, 30) + '...' : photo.title}">Title (design)</div>
             <img src="#" alt="#" class="img-fluid" th:src="${photo.photo}" th:alt="${photo.title}" />
@@ -26,6 +26,36 @@
       </th:block>
     </div>
   </div>
+
+  <!-- Modal Window for Photo View -->
+  <div class="modal fade" id="photoView" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable">
+      <div class="modal-content bg-dark rounded-4">
+        <div class="modal-body">
+          <img class="img-fluid" src="#" alt="#">
+        </div>
+        <div class="modal-footer">
+          <div class="d-flex gap-2 w-100 justify-content-between py-1">
+            <div class="btn-group">
+              <button class="btn btn-warning text-truncate" type="button" style="width: 100px">Story</button>
+              <button class="btn btn-outline-warning photo-story" type="button"></button>
+            </div>
+            <div>
+              <div class="btn-group pt-1">
+                <button class="btn btn-warning" type="button">Copy URL</button>
+                <button class="btn btn-outline-warning copy-btn" type="button"><i class="bi bi-clipboard-fill"></i></button>
+              </div>
+              <div class="btn-group pt-1">
+                <button class="btn btn-warning" type="button">Open IMG</button>
+                <a href="#" class="btn btn-outline-warning" target="_blank"><i class="bi bi-image-fill"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <nav aria-label="Page navigation"
        th:if="${totalPages > 0}"
        th:with="pageQuery=${'?page='},
