--- a/src/main/resources/templates/CategoriesView.html
+++ b/src/main/resources/templates/CategoriesView.html
@@ -19,11 +19,30 @@
         <div class="w-75 p-3 mx-auto">
           <a href="#" class="btn btn-lg btn-warning w-25" th:href="@{/categories/create}">Create Category</a>
           <div class="w-100 mt-3">
-            <div class="btn-group m-2" th:each="category : ${categories}">
-              <button type="button" class="btn btn-lg btn-warning" th:text="${category.name}">Category (design)</button>
-              <a href="#" class="btn btn-lg btn-outline-warning" th:if="${category.getId() != 1}" th:href="@{/categories/{id}/update(id=${category.id})}"><i class="bi bi-pencil-square"></i></a>
-              <a href="#" class="btn btn-lg btn-outline-danger" th:if="${category.getId() != 1}" th:href="@{/categories/{id}/delete(id=${category.id})}"><i class="bi bi-x-square"></i></a>
-            </div>
+            <th:block th:each="category : ${categories}">
+              <div class="btn-group m-2">
+                <button type="button" class="btn btn-lg btn-warning" th:text="${category.name}">Category (design)</button>
+                <a href="#" class="btn btn-lg btn-outline-warning" th:if="${category.getId() != 1}" th:href="@{/categories/{id}/update(id=${category.id})}"><i class="bi bi-pencil-square"></i></a>
+                <a href="#" class="btn btn-lg btn-outline-danger" th:if="${category.getId() != 1}" th:href="@{/categories/{id}/delete(id=${category.id})}" data-bs-toggle="modal" data-bs-target="#deleteCategoryModal" th:data-bs-target="'#deleteCategoryModal-' + ${category.getId()}"><i class="bi bi-x-square"></i></a>
+              </div>
+
+              <!-- Modal Window for Delete Category Confirmation -->
+              <div class="modal fade" id="deleteCategoryModal" tabindex="-1" aria-labelledby="deleteCategoryModal" aria-hidden="true" th:id="'deleteCategoryModal-' + ${category.getId()}">
+                <div class="modal-dialog modal-dialog-centered modal-sm deletePhotoModal">
+                  <div class="modal-content bg-dark">
+                    <div class="modal-header bg-dark">
+                      <h1 class="modal-title fs-5 text-warning">Delete Category</h1>
+                    </div>
+                    <div class="modal-footer bg-dark">
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-warning">Are you sure?</button>
+                        <a type="button" class="btn btn-sm btn-danger" th:href="@{/categories/{id}/delete(id=${category.id})}">Delete</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </th:block>
           </div>
         </div>
     </div>
