--- a/src/main/resources/templates/ContestsView.html
+++ b/src/main/resources/templates/ContestsView.html
@@ -16,7 +16,7 @@
             <form th:replace="~{fragments/contest-form :: contest-form-sort}"></form>
         </th:block>
 
-        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 align-items-stretch g-4 py-5">
+        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 g-4 py-5">
             <th:block th:each="contest : ${contests}">
                 <div class="col">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg contest-cards"
@@ -26,7 +26,7 @@
                         </div>
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                             <h3 class="pt-4 mt-4 mb-4 display-5 lh-1 neon-text"
-                                th:text="${contest.title.length() > 20 ? #strings.substring(contest.title, 0, 20) + '...' : contest.title}">
+                                th:text="${contest.title.length() > 25 ? #strings.substring(contest.title, 0, 25) + '...' : contest.title}">
                                 Title (design)</h3>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
